# agentic-ai-kata

./: .flake8  README.md  pyproject.toml  requirements.txt  settings.json
agentic_ai_kata/: base.py  kata_00_setup.py  kata_01_augmented.py  kata_02_chaining.py  kata_03_routing.py  kata_04_parallel.py  kata_05_orchestrator.py  kata_06_evaluator.py  kata_07_agent.py  settings.py
agentic_ai_kata/kata/: __init__.py  kata_00_setup.py  kata_01_augmented.py  kata_02_chaining.py  kata_03_routing.py  kata_04_parallel.py  kata_05_orchestrator.py  kata_07_agent.py  (+1 more)
articles/: blortzville-the-eminent-sprawl-of-enigma-and-hub-of-cosmic-curiosities.md  fizzopolis-the-bubbling-metropolis-of-effervescence-and-carbonated-dreams-on-planet-flibberon-9.md  fribbledorp-prime-the-glorious-nexus-of-gleebor-7-where-reality-bends-and-minds-unwind.md  slorpius-city-the-bejeweled-hub-of-quantum-nonsense-and-interdimensional-frolics.md  squinch-city-jewel-of-the-wobble-plains-gateway-to-utter-inanity.md  swizzleburg-the-galactic-whirl-of-wonder-and-wobbly-wisdom-blessed-by-the-nebula-king-and-endorsed-by-the-intergalactic-society-of-prankster-planet-pioneers.md  the-grand-glipglorp-metropolis-resplendent-hub-of-squanchovia-prime-and-jewel-of-the-glarbulon-cluster.md
conversations/: casual_banter.json  email_me_a_thing.json  new_phone_who_dis.json  sea_shanty_lookup.json
tests/: conftest.py  test_kata_00_setup.py  test_kata_01_augmented.py  test_kata_02_chaining.py  test_kata_03_routing.py  test_kata_04_parallel.py  test_kata_05_orchestrator.py  test_kata_06_evaluator.py  test_kata_07_agent.py
(+9 files in other folders)
