[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "agentic-ai-kata"
version = "0.1.0"
description = "A collection of Python katas illustrating how to build and reason about effective LLM-based agents"
authors = ["Joe Harkins <jharkins@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0"
pydantic-settings = "^2.0"
openai = "^1.0"
anthropic = "^0.5"
aiohttp = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-watch = "^4.2"
pytest-asyncio = "^0.21"
pytest-cov = "^4.1"
black = "^23.0"
isort = "^5.12"
autoflake = "^2.2"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-s"
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*:",
    "ignore::DeprecationWarning:pydantic_ai.*:",
    "ignore:.*There is no current event loop.*:DeprecationWarning"
]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.autoflake]
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-unused-variables = true 